Gray-Space/src/objects/GS_General__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>GS_Base_Photo_URL__c</fullName>
        <label>Base Photo URL</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Case_Entitlement__c</fullName>
        <label>Case Entitlement</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Case_queueID__c</fullName>
        <label>Case queueID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_GrayFamily_Id__c</fullName>
        <label>GrayFamily Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Standard_Pricebook_Id__c</fullName>
        <label>Standard Pricebook Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>General</label>
</CustomObject>